--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -26,7 +26,7 @@
 	\ifdim\ht\IBoxA>\ht\IBoxB
 		\setlength\IHeight{\ht\IBoxB}%
 	\else\setlength\IHeight{\ht\IBoxA}\fi
-	\begin{figure}[tb]
+	\begin{figure}[!htb]
 		\minipage[t]{0.48\textwidth}\centering
 			\includegraphics[height=\IHeight]{#1}
 			\caption{#2}\label{#3}
